--- a/app/src/main/res/layout/fragment_diary.xml
+++ b/app/src/main/res/layout/fragment_diary.xml
@@ -92,7 +92,6 @@
 
 
             <TextView
-                android:id="@+id/diary_fat_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/varela"
@@ -113,10 +112,9 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:progress="10" />
+                tools:progress="50" />
 
             <TextView
-                android:id="@+id/diary_carb_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/varela"
@@ -137,10 +135,9 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/diary_fat"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:progress="5" />
+                tools:progress="50" />
 
             <TextView
-                android:id="@+id/diary_protien_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/varela"
@@ -162,7 +159,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/diary_carb"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:progress="20" />
+                tools:progress="50" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <RelativeLayout
@@ -307,7 +304,7 @@
                 android:layout_marginHorizontal="25dp"
                 android:layout_marginTop="25dp"
                 app:cardBackgroundColor="@color/lunch"
-                app:layout_constraintTop_toBottomOf="@+id/lunch">
+                app:layout_constraintTop_toBottomOf="@+id/breakfast_egg">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -319,76 +316,7 @@
                     android:textColor="@color/white"
                     android:textSize="22sp" />
 
-
-
             </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-            android:id="@+id/lunch_burger"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-                android:visibility="gone"
-            android:layout_marginHorizontal="25dp"
-            app:layout_constraintTop_toBottomOf="@+id/lunch">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:fontFamily="@font/varela"
-                        android:text="Burger"
-                        android:textColor="@color/black"
-                        android:textSize="18sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:fontFamily="@font/varela"
-                        android:text="Fat: 39g"
-                        android:textColor="@color/fat"
-                        android:textSize="18sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:fontFamily="@font/varela"
-                        android:text="Carb: 61g"
-                        android:textColor="@color/carb"
-                        android:textSize="18sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:fontFamily="@font/varela"
-                        android:text="Protien: 40g"
-                        android:textColor="@color/protien"
-                        android:textSize="18sp" />
-                </LinearLayout>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:fontFamily="@font/varela"
-                    android:text="750 cal"
-                    android:textSize="18sp" />
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/snack"
@@ -451,41 +379,6 @@
                     android:textColor="@color/white"
                     android:textSize="22sp" />
             </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/water_bottle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_marginHorizontal="25dp"
-                app:layout_constraintTop_toBottomOf="@+id/water">
-
-            <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:fontFamily="@font/varela"
-                        android:text="Water"
-                        android:textColor="@color/black"
-                        android:textSize="18sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="10dp"
-                        android:fontFamily="@font/varela"
-                        android:text="  520 ml"
-                        />
-
-            </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
         </LinearLayout>
     </ScrollView>
 
