--- a/app/src/main/res/layout/bottom_meal.xml
+++ b/app/src/main/res/layout/bottom_meal.xml
@@ -22,6 +22,7 @@
     </androidx.cardview.widget.CardView>
 
     <Button
+        android:id="@+id/breakfast_meal"
         android:layout_marginTop="3dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,6 +32,7 @@
         android:textColor="@color/hover" />
 
     <Button
+        android:id="@+id/lunch_meal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button_hover"
@@ -39,6 +41,7 @@
         android:textColor="@color/hover" />
 
     <Button
+        android:id="@+id/dinner_meal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button_hover"
@@ -47,6 +50,7 @@
         android:textColor="@color/hover" />
 
     <Button
+        android:id="@+id/snack_meal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button_hover"
