--- a/app/src/main/res/layout/bottom_water.xml
+++ b/app/src/main/res/layout/bottom_water.xml
@@ -20,11 +20,14 @@
             android:textSize="25dp" />
 
         <ImageView
+            android:id="@+id/done_water"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_gravity="center_vertical|end"
             android:layout_marginEnd="10dp"
+            android:clickable="true"
             android:contentDescription="@null"
+            android:focusable="true"
             android:src="@drawable/ic_baseline_check_24" />
 
     </androidx.cardview.widget.CardView>
@@ -32,8 +35,8 @@
     <ImageView
         android:layout_width="76dp"
         android:layout_height="76dp"
-        android:layout_marginTop="20dp"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:contentDescription="@null"
         android:src="@drawable/ic_water" />
