--- a/app/src/main/res/layout/bottom_weight.xml
+++ b/app/src/main/res/layout/bottom_weight.xml
@@ -20,11 +20,14 @@
             android:textSize="25dp" />
 
         <ImageView
+            android:id="@+id/done_weight"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_gravity="center_vertical|end"
             android:layout_marginEnd="10dp"
+            android:clickable="true"
             android:contentDescription="@null"
+            android:focusable="true"
             android:src="@drawable/ic_baseline_check_24" />
 
     </androidx.cardview.widget.CardView>
